# supervisory-procedures

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  generate_access_walkthrough_pdf.py  generate_walkthrough_pdf.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: validate-skills.yml
docs/: agent-integration.md  authoring-guide.md  hub-spoke-governance.md  schema-reference.md  schema-simplification-recommendations.md
examples/: load_skill_in_agent.py  loan_application_activity_dispatch.py  nemo_integration_demo.py
registry/: README.md
registry/financial_crime_compliance/: README.md  sanctions_pep_alert_review.yml
registry/financial_crime_compliance/sanctions-pep-alert-review/: SKILL.md  skill.yml
registry/investment_banking/: README.md  retail-company-valuation.yml
registry/investment_banking/retail-company-valuation/: SKILL.md  skill.yml
registry/retail_banking/: README.md  loan_application_processing.yml
registry/shared/: README.md
schema/: CHANGELOG.md  skill.schema.json
supervisory_procedures/: __init__.py
supervisory_procedures/adapters/: base.py  generic_json.py  nemo_guardrails.py
supervisory_procedures/cli/: export.py  list_skills.py  main.py  render.py  show.py  validate.py  wizard.py
supervisory_procedures/core/: access_control.py  registry.py  renderer.py  validator.py
tests/: test_access_control.py  test_nemo_adapter.py  test_registry.py  test_validator.py
tests/fixtures/: draft_skill.yml  invalid_skill_missing_fields.yml  valid_skill.yml  wildcard_agents_skill.yml
(+24 files in other folders)
